tests/ui/ferrocene/compiler-arguments/crate-name/crate-name_attr_mismatch.stderr
error: `--crate-name` and `#[crate_name]` are required to match, but `foo` != `bar`
  --> $DIR/crate-name_attr_mismatch.rs:4:1
   |
LL | #![crate_name = "bar"]
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

