tests/ui/ferrocene/compiler-arguments/crate-name/crate-name_attr_mismatch.rs
//@ check-fail
//@ compile-flags: --crate-name=foo

#![crate_name = "bar"] //~ ERROR
fn main() {}

// ferrocene-annotations: um_rustc_crate_name
